# medium

./: .gitignore  .uvignore  COMMANDS_CHEATSHEET.md  ENTRY_POINTS.md  INSTALL.md  LICENSE  Makefile  OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_FIRST.md  UV_GUIDE.md  app.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
scripts/: train_all_pairs.sh
trading_system/: __init__.py  __main__.py  cli.py
trading_system/backtest/: __init__.py  engine.py  visualizer.py
trading_system/comparison/: __init__.py  comparator.py  visualizer.py
trading_system/examples/: analyze_sentiment.py  backtest_combined_strategy.py  compare_strategies.py  complete_trading_strategy.py  get_live_signal.py  predict_forex.py  run_backtest.py  train_models.py  validate_models.py
trading_system/live_trading/: __init__.py  signal_generator.py
trading_system/ml_predictor/: __init__.py  correlations.py  predictor.py  trainer.py
trading_system/pattern_analyzer/: __init__.py  hlc_patterns.py
trading_system/risk_management/: __init__.py  atr_calculator.py  position_sizer.py  risk_manager.py
trading_system/sentiment_analyzer/: __init__.py  analyzer.py  news_sources.py
trading_system/strategies/: __init__.py  base_strategy.py  hybrid_strategy.py  ml_strategy.py  pattern_strategy.py  sentiment_strategy.py
trading_system/utils/: __init__.py  helpers.py
